--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
     crossorigin="anonymous"></script>
-<script type="text/javascript" src="/mapper-options.js"></script>
+<script type="text/javascript" src="/mapper-features.js"></script>
 <script type="text/javascript" src="/mapper-list.js"></script>
 <script type="text/javascript" src="/app.js"></script>
 <script type="text/javascript" src="/main.js"></script>
